[package]
name = "softpaw"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.17", default-features = false }
tokio-util = { version = "0.7.17", features = [
    "codec",
], default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
